# google-cloud-examples

.github/workflows/: slo.yaml
go/slo/: Dockerfile  go.mod  main.go
go/temperature-aggregation/: README.md  TUTORIAL.ja.md
go/temperature-aggregation/aggregator/: go.mod
go/temperature-aggregation/receiver/: go.mod
python/detection-log/: .dockerignore  Dockerfile  README.md  detect.py  logprocessor.py  pyproject.toml
python/detection-log/detectionlog/detector/: __init__.py  detector.py
python/detection-log/detectionlog/logprocessor/: __init__.py  logprocessor.py
python/detection-log/detectionlog/types/: __init__.py  types.py
python/detection-log/tools/: deploy_logprocessor.sh
python/pubsub-notify/: .envrc.example  README.md
python/pubsub-notify/backend/: .dockerignore  Dockerfile  cloudbuild.yaml  main.py  pyproject.toml
python/pubsub-notify/frontend/: .dockerignore  .gitignore  package-lock.json  package.json
python/pubsub-notify/frontend/pages/: _app.tsx  _document.tsx  index.tsx
python/pubsub-notify/frontend/src/: firebase.ts  theme.ts
python/pubsub-notify/message_sender/: main.py  pyproject.toml
python/pubsub-notify/terraform/: backend.tf  firestore.tf  services.tf  terraform.tf
python/video-slicer/: .dockerignore  Dockerfile  Dockerfile.job  main_job.py  pyproject.toml
